--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -2,16 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DOM Learning</title>
+    <style>
+        .bg-black{
+            background-color: black;
+            color: white;
+        }
+    </style>
 </head>
-<body>
-    <div class = "bg-black">
-        <h1 id = "title" class = "heading">DOM Learning on Chai aur Code <span style="display: none;"></span></h1>
+<body class = "bg-black">
+    <div>
+        <h1 id = "title" class = "heading" style = "color: red; background-color: aqua;">DOM Learning on Chai aur Code <span style="display: none;">test text</span></h1>
         <h2>Lorem ipsum dolor sit amet</h2>
         <h2>Lorem ipsum dolor sit amet</h2>
         <h2>Lorem ipsum dolor sit amet</h2>
-        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet.</p>
         <input type="password" name="" id="">
 
         <ul>
@@ -23,41 +28,70 @@
 </body>
 </html>
 
-<!-- DOM - Document Object Model -->
+
 <!-- 
+Window
+https://developer.mozilla.org/en-US/docs/Web/API/Window
+The Window interface represents a window containing a DOM document; the document property points to the DOM document loaded in that window.
+A window for a given document can be obtained using the document.defaultView property. 
+-->
+
+<!-- Unlike other logging methods, console.dir() does not attempt to pretty-print the object. For example, if you pass a DOM element to console.dir(), 
+it will not be displayed like in the element inspector, but will instead show a list of properties. -->
+
+
+<!-- DOM - Document Object Model -->
+<!-- The Document Object Model (DOM) connects web pages to scripts or programming languages by representing the structure of a document—such as the HTML representing a web page—in memory. 
+Usually it refers to JavaScript, even though modeling HTML, SVG, or XML documents as objects are not part of the core JavaScript language.
+The DOM represents a document with a logical tree. Each branch of the tree ends in a node, and each node contains objects. 
+DOM methods allow programmatic access to the tree. With them, you can change the document's structure, style, or content. -->
+<!-- 
+
 Window -> Document -> HTML 
 
-HTML -> HEAD, BODY 
+HTML -> HEAD NODE, BODY NODE
 
-HEAD -> TITLE , META (Attribute)
+HEAD NODE -> TITLE NODE, META
 
-TITLE -> TEXT
+TITLE NODE -> TEXT NODE
 
-BODY -> div, 
+META NODE -> Attribute
 
-div -> attribute, h1, p 
+BODY -> DIV 
 
-h1 -> attribute, text node
+DIV -> Attribute, H1, P
 
-p -> text node -->
+H1 -> Attribute, TEXT NODE
 
-<!-- document.getElementById('firstHeading').innerHTML = "<h1>Chai aur code</h1>" -->
+P -> TEXT NODE -->
+
+<!-- document.links - Returns HTML Collection -->
+
+<!-- document.getElementById('firstHeading') - Returns the element with id = 'firstHeading' -->
+
+<!-- document.getElementById('firstHeading').innerHTML = "<h1>Chai aur code</h1>" - Manipulates the heading -->
 
 <!-- document.getElementById('title').id -->
 <!-- document.getElementById('title').className -->
+
 <!-- document.getElementById('title').getAttribute('class') -->
 <!-- document.getElementById('title').setAttribute('class', 'test heading') -->
 
 
-<!-- const title = document.getElementById('title')
+<!-- 
+const title = document.getElementById('title')
 title.style.backgroundColor = 'green'
 title.style.padding = '15px'
-title.style.borderRadius = '15px' -->
+title.style.borderRadius = '15px'
+title.innerText  //DOM Learning on Chai aur Code
+title.textContent  //DOM Learning on Chai aur Code test text
+title.innerHTML //'DOM Learning on Chai aur Code <span style="display: none;">test text</span>'
+-->
 
 <!-- 
 1.innerHTML: returns all html nodes 
-2.textContent : returns all text content
-3.innerText : gives the text in the selected node
+2.textContent : returns all text content (Use textContent when you just need the raw text from the DOM (faster, includes hidden text))
+3.innerText : gives the text in the selected node (Use innerText when you specifically need the visible text as the user sees it in the browser)
 4.querySelector
 5.querySelectorAll
 6.getAttribute
@@ -65,16 +99,19 @@ title.style.borderRadius = '15px' -->
 -->
 
 <!-- document.getElementsByClassName('heading') -->
+<!-- https://developer.mozilla.org/en-US/docs/Web/API/Document/querySelector -->
 <!-- document.querySelector('h2') -->
 <!-- document.querySelector('#title')  -->
 <!-- document.querySelector('.heading')  -->
 <!-- document.querySelector('input[type="password"]') -->
 
 
-<!-- const myUL = document.querySelector('ul')
+<!-- 
+const myUL = document.querySelector('ul')
 const turnGreen = myUL.querySelector('li')
 turnGreen.style.backgroundColor = 'green'
-turnGreen.innerText = 'hello' -->
+turnGreen.innerText = 'hello' 
+-->
 
 <!-- NodeList and HTMLCollection are not arrays as they don't have alll the methods which Arrays have 
 For example: NodeList doesn't have map method -->
@@ -84,20 +121,28 @@ For example: NodeList doesn't have map method -->
 <!-- 
 tempLiList.forEach(function (l){
     l.style.backgroundColor = 'blue'
-})
--->
+}) -->
+
 
 
 <!-- 
 const tempClassList = document.getElementsByClassName('list-item')  -  returns HTMLCollection(3) [li.list-item, li.list-item, li.list-item] 
 const myConvertedArray = Array.from(tempClassList)  - Since HTMLCollection has no looping methods, so we have to convert it to an array
 
-
- -->
-
-<!-- 
 const allH3 = document.querySelectorAll('h3')
 allH3.forEach((li) => {
     li.style.color = 'green'
 }) 
+-->
+
+<!--
+
+| Feature              | HTMLCollection           | NodeList                         |
+| -------------------- | ------------------------ | -------------------------------- |
+| Contains             | Only element nodes       | Any node type                    |
+| Live updates         | ✅ Yes                    | ❌ No (except `childNodes`)       |
+| Returned by          | `getElementsBy*` methods | `querySelectorAll`, `childNodes` |
+| Access by name/id    | ✅ Yes                    | ❌ No                             |
+| `.forEach()` support | ❌ Old browsers only      | ✅ Modern browsers                |
+
 -->
