--- a/08_events/two.html
+++ b/08_events/two.html
@@ -17,7 +17,7 @@
         document.querySelector('h1').innerHTML = "best JS Series";
     }
     // setTimeout(sayAnirudh,2000)
-    const changeMe = setTimeout(changeText, 2000)
+    const changeMe = setTimeout(changeText, 2000)   //https://developer.mozilla.org/en-US/docs/Web/API/Window/setTimeout
     document.querySelector('#stop').addEventListener('click', function(){
         clearTimeout(changeMe);
         console.log("STOPPED");
