--- a/09_advance_one/ApiRequest.html
+++ b/09_advance_one/ApiRequest.html
@@ -5,12 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style = "background-color: black; color: white">
+    0	UNSENT	Client has been created. open() not called yet.
+    1	OPENED	open() has been called.
+    2	HEADERS_RECEIVED	send() has been called, and headers and status are available.
+    3	LOADING	Downloading; responseText holds partial data.
+    4	DONE	The operation is complete.
 </body>
 <script>
-    const requestURL = 'https://api.github.com/users/';
-    const xhr = new XMLHttpRequest();
+    const requestURL = 'https://api.github.com/users/hiteshchoudhary';
+    const xhr = new XMLHttpRequest();   //https://developer.mozilla.org/en-US/docs/Web/API/XMLHttpRequest
     xhr.open('GET', requestURL);
+    xhr.onreadystatechange = function() {
+        console.log(xhr.readyState);
+        if (xhr.readyState === 4){
+            const data = JSON.parse(this.responseText);
+            console.log(data);
+            console.log(typeof data);
+            console.log(data.followers);
+        }
+    }
     xhr.send()
 </script>
 </html>
